src/objects/Spire_Auth_Entry_Grid__mdt.object
<CustomObject>
    <description>Populates Spire auth entry screen per US3697722</description>
    <fields>
        <fullName>Admitting__c</fullName>
        <label>Admitting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attending__c</fullName>
        <label>Attending</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <label>Facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCP__c</fullName>
        <label>PCP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Roles__c</fullName>
        <label>Provider Roles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_or_Procedure__c</fullName>
        <label>Reference or Procedure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requesting__c</fullName>
        <label>Requesting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing__c</fullName>
        <label>Servicing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spire_Place_of_Service__c</fullName>
        <label>Spire Place of Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spire_Service_Description__c</fullName>
        <label>Spire Service Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spire_Service_Detail__c</fullName>
        <label>Spire Service Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spire_Service_Setting__c</fullName>
        <label>Spire Service Setting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Spire Auth Entry Grid</label>
    <listViews>
        <fullName>Spire</fullName>
        <columns>MasterLabel</columns>
        <columns>LOB__c</columns>
        <columns>Reference_or_Procedure__c</columns>
        <columns>Spire_Service_Detail__c</columns>
        <columns>Spire_Service_Setting__c</columns>
        <columns>Spire_Place_of_Service__c</columns>
        <columns>Spire_Service_Description__c</columns>
        <columns>Facility__c</columns>
        <columns>Servicing__c</columns>
        <columns>Attending__c</columns>
        <columns>Requesting__c</columns>
        <columns>Admitting__c</columns>
        <columns>PCP__c</columns>
        <columns>Notes__c</columns>
        <columns>Provider_Roles__c</columns>
        <filterScope>Everything</filterScope>
        <label>Spire</label>
    </listViews>
    <pluralLabel>Spire Auth Entry Grid</pluralLabel>
</CustomObject>